<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MyProfileActivity"
    tools:showIn="@layout/activity_my_profile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

            <ImageView
                android:id="@+id/user_profile_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="#ffffff"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bertrand_tchuente" />

            <TextView
                android:id="@+id/user_profile_name"
                android:layout_below="@+id/user_profile_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/profile_user_fullname"
                android:textSize="20sp" />

        </RelativeLayout>

        <View
            android:id="@+id/profile_layout2"
            android:layout_below="@id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_layout2"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_profile_track"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="16sp"
                android:text="@string/profile_user_track" />

            <TextView
                android:id="@+id/user_profile_country"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="16sp"
                android:text="@string/profile_user_country" />

            <TextView
                android:id="@+id/user_profile_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="16sp"
                android:text="@string/profile_user_email" />

            <TextView
                android:id="@+id/user_profile_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="16sp"
                android:text="@string/profile_user_phone" />

            <TextView
                android:id="@+id/user_profile_slack_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="16sp"
                android:text="@string/profile_user_slack_id" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>